# mcphero

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release_pypi.yaml
mcphero/: __about__.py  __init__.py  exceptions.py
mcphero/adapters/: __init__.py  base_adapter.py  gemini.py  openai.py
tests/: conftest.py  test_base_adapter.py  test_gemini_adapter.py  test_openai_adapter.py  test_package_init.py
